--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".vim/plugged/coc.nvim"]
 	path = .vim/plugged/coc.nvim
 	url = git@github.com:neoclide/coc.nvim.git
+[submodule ".vim/plugged/ctrlp.vim"]
+	path = .vim/plugged/ctrlp.vim
+	url = git@github.com:ctrlpvim/ctrlp.vim.git
